--- a/Table.html
+++ b/Table.html
@@ -9,7 +9,7 @@ table, th, td {
 </style>
   </head>
 <body>
-<table>
+<table style="width:50%">
 <tr>
     <th>First name</th>
     <th>Last name</th>
